# react-native-coingecko-crypto-app

./: .env.example  .gitignore  .node-version  .xcode.env.local  ANDROID_BUILD.md  ARCHITECTURE_AND_REQUIREMENTS.md  BUILD_INSTRUCTIONS.md  DEPLOYMENT.md  Gemfile  INTEGRATION_GUIDE.md  IOS_SETUP.md  MODERN_STACK_GUIDE.md  README.md  SESSION_FIXES.md  app.json  babel.config.js  cli-wrapper.js  iOS_QUICK_START.md  index.js  install-metro-fix.sh  jest.config.js  jest.setup.js  metro-fix.sh  metro.config.js  package-lock.json  package.json  react-native.config.js  run-ios.sh  tsconfig.json  verify-metro-fix.sh
android/: build.gradle  gradle.properties  gradlew  init-wrapper.js  init.gradle  settings.gradle
android/app/: build.gradle  build.gradle.new
android/app/src/main/jni/: CMakeLists.txt
docs/: ANDROID_BUILD.md  ANIMATED_COMPONENTS_GUIDE.md  API_INTEGRATION.md  BUILD_INSTRUCTIONS.md  COMPLETION_FEATURES_SUMMARY.md  COMPLETION_REPORT.md  DEPLOYMENT.md  EXPANDABLE_TOKEN_ITEM_GUIDE.md  FEATURES_DOCUMENTATION.md  FSD_ARCHITECTURE.md  FSD_COMPLETION_SUMMARY.md  FSD_QUICK_REFERENCE.md  IMPLEMENTATION_SUMMARY.md  METRO_CONNECTION_SOLUTION.md  METRO_FIX_REPORT.md  MIGRATION_GUIDE.md  MODERN_STACK_COMPLETE.md  PROJECT_STATUS.md  REACT_QUERY_I18N_GUIDE.md  README.md  ROUTING.md
ios/: .xcode.env  .xcode.env.local  Podfile
ios/CryptoTokensApp/: AppDelegate.m  (+1 more)
scripts/: build-android.sh  build-ios.sh  check.sh  create-ios-project.rb  dev.sh  emulator-setup.sh  init-ios-project.sh  ios-setup.sh  run-ios-direct.sh  run-ios.sh  test.sh
src/: App.tsx  config.ts  index.ts
(+132 files in other folders)
